# LLM_palimpzest_tryout

./: .env.example  .gitignore  =4.5  MOMA_DATASET_ARCHITECTURE.md  MULTIPLE_FILTERS_FEATURE.md  demo_multiple_filters.py  pyproject.toml  test.py  validate_multiple_filters.py
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
ap_picker/: custom_models.py  main.py
ap_picker/datasets/: ap_dataset.py  moma_dataset.py
ap_picker/monkey_patching/: __init__.py  add_model_support.py  use_custom_optimizer.py
ap_picker/operators/: __init__.py  dataset_expand.py  dataset_expansion.py  dataset_level_filter.py  hybrid_filter.py  sem_filter_by_task copy.py  sem_filter_by_task.py
ap_picker/optimizer/: ap_optimizer.py
ap_picker/planner/: get_plan.py
assets/aps/: temperature_in_lausanne.json  temperature_in_zurich.json
backup/: constants_backup.py  test.py
parse-answer-errors/: error-1769782931.3729904.txt  error-1769783017.8871307.txt  error-1769783390.574665.txt  error-1769783409.6374626.txt  error-1769783448.858346.txt  error-1769783485.3648932.txt  error-1769783543.9707227.txt  error-1769783619.0695262.txt  error-1769783659.8977807.txt  error-1769784493.4917974.txt  error-1769784920.7119339.txt  error-1769785042.5464547.txt  error-1769785046.7645721.txt  error-1769785094.9176297.txt  error-1769785192.9931936.txt  error-1769786334.5168045.txt  error-1769786353.5787654.txt  error-1769786757.3926694.txt  error-1769786864.1468427.txt
tests/: conftest.py  test.py  test_dataset.py  test_int_sql_filter.py  test_logical_operations.py  test_reader.py
(+16 files in other folders)
