[project]
name = "ap-picker"
version = "0.1.0"
description = "Add your description here"
authors = [
{ name = "Kyu-sub hwang", email = "kyu-sub.hwang@etu.univ-grenoble-alpes.fr" },
{ name = "Lucas Peirone", email = "lucas.peirone@univ-grenoble-alpes.fr" }
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "dotenv>=0.9.9",
    "litellm>=1.81.6",
    "palimpzest @ git+https://github.com/SoTrx/palimpzest.git@feat/use-litellm-for-embedding#egg=palimpzest",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.24.0",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "neoteroi-mkdocs>=1.2.0",
    "pymdown-extensions>=10.20",
    "mike>=2.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ap_picker"]

[tool.hatch.metadata]
allow-direct-references = true

[pytest]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
